<resources>
    <string name="app_name">Dictionaries</string>

    <string name="dialog_fragment_text">Выберите строку:</string>
    <string name="dialog_fragment_title">Таблица %s</string>
    <string name="dialog_fragment_button_null">Использовать null</string>
    <string name="dialog_fragment_button_close">Закрыть</string>

    <string name="fragment_tables_title">Выберите таблицу</string>
    <string name="fragment_table_edit">Внести изменения</string>
    <string name="fragment_table_add">Добавить</string>
    <string name="fragment_table_done">Применить</string>

    <string name="dialog_date_picker_button_null">Использовать null</string>

    <string name="dialog_welcome_button_continue">Продолжить</string>
    <string name="dialog_welcome_text">Добрый день! Данное приложение предоставляет возможность работать со встраиваемыми базами данных, работающими на SQLite. Для работы со справочником выберите его из списка на главном экране, затем можете работать с ним. Поддерживаются следующие функции: вставка, изменение, сортировка и удаление записей. Для вставки нажмите на соответствующую кнопку внизу экрана, под последей записью в таблице появится строка с названиями соответствующих столбцов с помощью однострочных, многострочных полей, диалогов вставьте необходимые значения, а затем нажмите кнопку "Применить". Для вставки null используется ключевое слово null (в любом регистре), в диалогах, где возможно, есть соответствующая кнопка. Для сортировки по колонке нажмите на название нужного столбца, в последствии появится стрелочка, указывающая на порядок сортировки (иногда необходимо нажать несколько раз (обычно в начале использования приложения)). Для удаления и изменения строки перейдите в режим редактирования, строки таблицы станут ярче. При долгом нажатии на строку она исчезнет. Для изменения внесите необходимые данные в поля и нажмите кнопку "Применить". Также любые изменения будут внесены только при условии их корректности, в случае возникновения ошибки появится диалог с ошибкой, в случае успеха - соответствующее уведомление. При проверке работоспособности стоит учитывать, что SQLite не является типобезопасной базой данных. Спасибо!</string>

    <string name="string_null">null</string>
    <string name="author">Чапайло Иван, 4 группа, 4 курс</string>
</resources>